# CW_6_DJANGO_MALYAROV_SKYRPO

./: .gitignore  Brewfile.lock.json  README.md  pyproject.toml
mailing_service/: db.sqlite3  requirements.txt
mailing_service/blog/: admin.py  models.py  urls.py  views.py
mailing_service/blog/migrations/: 0001_initial.py
mailing_service/blog/templates/blog/: blog.html  blog_list.html  post_detail.html
mailing_service/mailing_service/: settings.py  urls.py  wsgi.py
mailing_service/newsletters/: admin.py  models.py  send_newsletters.py  tasks.py  tests.py  urls.py  views.py
mailing_service/newsletters/migrations/: 0001_initial.py  0002_newsletter_is_active.py  0003_subscription.py
mailing_service/newsletters/templates/newsletters/: index.html  newsletter_list.html
mailing_service/users/: forms.py  models.py  urls.py  views.py
mailing_service/users/migrations/: 0001_initial.py
mailing_service/users/templates/users/: path_to_login_template.html
